headers-match/demo-service1/service-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          http_protocol_options:
            header_key_format:
              stateful_formatter:
                name: preserve_case
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
            
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/listHeaders"
                route:
                  cluster: local_service
                request_headers_to_add:
                - header:
                    key: X-Client-IP
                    value: '%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%'   
                - header:
                    key: d-local-addr
                    value: '%DOWNSTREAM_LOCAL_ADDRESS%'  
                response_headers_to_add:
                - header:
                    key: custom-sample-header
                    value: xxxxx
                - header:
                    key: custom-sample-header-1
                    value: yyyyyy
                   
                 
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: local_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9000
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
